<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.auth.login.LoginFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title=""
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTextAppearanceNormal" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <code.name.monkey.retromusic.views.BaselineGridTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextViewHeadline5"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/enter_form"
            tools:maxLines="@string/grid_size_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/userImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userImage"
            app:layout_constraintTop_toTopOf="@id/userImage"
            app:startIconDrawable="@drawable/round_mail_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/user_name"
                android:importantForAutofill="yes"
                android:inputType="textPersonName|textCapWords|text"
                android:textAppearance="@style/TextViewSubtitle1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/userImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/userImage"
            app:layout_constraintTop_toTopOf="@id/userImage"
            app:startIconDrawable="@drawable/outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:textAppearance="@style/TextViewSubtitle1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingVertical="@dimen/_13sdp"
            android:text="@string/login"
            android:textAppearance="@style/TextViewButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login_by_otp"
            android:textAppearance="@style/TextViewSubtitle1"
            android:textStyle="bold"
            tools:maxLines="@string/grid_size_1" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>