<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_13sdp"
        android:textAppearance="@style/TextViewButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_13sdp"
        android:textAppearance="@style/TextViewButton"
        android:textColor="?android:attr/textColorPrimary" />

</LinearLayout>