...
    <string name="set_password_title">Đặt mật khẩu</string>
    <string name="set_password_content">Đặt mật khẩu để hoàn thành bước cuối cùng thiết lập tài khoản của bạn</string>
    <string name="success">Hoàn thành</string>
    <string name="welcome_back">Chào mừng trở lại</string>
    <string name="enter_form">Nhập thông tin của bạn để tiếp tục</string>
    <string name="login_by_otp">Đăng nhập bằng OTP</string>
    <string name="login_by_pass">Đăng nhập bằng mật khẩu</string>
    <string name="enter_form_login_by_otp">Trong trường hợp bạn quên mật khẩu bạn có thể đăng nhập bằng OTP</string>

    <string name="unknow_error">Unknown error.</string>
    <string name="unknow_success">Unknown success.</string>
    <string name="invalid_protobuf_format">Định dạng Protobuf không hợp lệ.</string>
    <string name="data_misssing">Thiếu dữ liệu yêu cầu.</string>
...
